# Baru-AI

./: .gitignore  README.md  config.example.yaml  dev.bat  pyproject.toml
baru_ai/: __init__.py  service.py
baru_ai/config/: __init__.py  manager.py  schema.py
baru_ai/pipelines/: __init__.py  asset_based.py  base.py  custom.py  linear.py  standard.py
baru_ai/prompts/: __init__.py  image_generation.py
baru_ai/services/: __init__.py  comfy_base_service.py  frame_html.py  frame_processor.py  gemini_image.py  history_manager.py  image_analysis.py  imagen_yohomin.py  llm_service.py  media.py  persistence.py  tts_service.py  video.py  video_analysis.py
baru_ai/utils/: __init__.py  content_generators.py  os_util.py  template_util.py
baru_api/: __init__.py  dependencies.py  main.py
baru_api/routers/: __init__.py  comfyui.py  config.py  content.py  frame.py  health.py  history.py  image.py  license.py  llm.py  resources.py  tasks.py  tts.py  uploads.py  video.py
baru_api/schemas/: __init__.py  tts.py  video.py
baru_api/tasks/: __init__.py  manager.py
baru_pixelle/: __init__.py  service.py
baru_pixelle/config/: __init__.py  manager.py  schema.py
baru_pixelle/pipelines/: __init__.py  asset_based.py  base.py  custom.py  linear.py  standard.py
baru_pixelle/prompts/: __init__.py
baru_pixelle/services/: __init__.py  comfy_base_service.py  frame_html.py  frame_processor.py  gemini_image.py  history_manager.py  image_analysis.py  imagen_yohomin.py  llm_service.py  media.py  persistence.py  tts_service.py  video.py  video_analysis.py
baru_pixelle/utils/: content_generators.py  os_util.py  template_util.py
electron/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
electron/main/: fastapi.ts  index.ts  menu.ts  preload.ts  updater.ts
electron/scripts/: bundle-ffmpeg.mjs  bundle-python.mjs  release.mjs  render_icon.py
electron/src/: App.tsx  index.css
electron/src/lib/: api.ts
workflows/selfhost/: video_digital_human.json  video_wan2.2_5B_i2v.json
(+6 files in other folders)
