[project]
name = "baru-pixelle"
version = "0.1.0"
description = "AI auto short-video engine — Electron desktop port of Pixelle-Video"
authors = [{name = "yohomin", email = "bauzonkid@yohomin.com"}]
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["baru_api", "baru_pixelle"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
